# agent-memory-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  demo.md
fixtures/: README.md
fixtures/agents-md/: AGENTS.md
fixtures/agents-md/.agents/notes/: handoff.md
fixtures/claude-project/: CLAUDE.md
fixtures/claude-project/.claude/memories/: release-notes.md
fixtures/cline-memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  userContext.md
fixtures/cursor-rules/.cursor/rules/: python-backend.mdc
fixtures/generic-json/: sample.json
scripts/: demo.ps1
src/memory_migrate_plugin/: __init__.py  bundle.py  cli.py  compare.py  core.py  doctor.py  init_adapter.py  manifest.py  merge.py  models.py  profiles.py  registry.py  release.py  repair.py  report.py  schema.py  serve.py  suggest.py  utils.py  validate.py  verify.py  ziputil.py
src/memory_migrate_plugin/adapters/: __init__.py  agents_md.py  base.py  claude_project.py  cline_memory_bank.py  codex_memories.py  cursor_rules.py  generic_json.py  markdown_bundle.py
tests/: test_roundtrip.py
